# matmul

./: .gitignore  README.md  benchmark.py  benchmark_loadgen.py  benchmark_triton.py  learn.py  matrix_specs.json  plot.py  predict.py  processing.py  pyproject.toml  utils.py
implementations/: __init__.py  base.py  numpy_backend.py  pure_python.py  pure_python_backend.py  torch_backend.py  triton_backend.py
tests/: test_triton_cpu.py  test_triton_gpu.py
