[project]
name = "matmul"
version = "0.1.0"
description = "Matrix Multiplication Benchmarking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "structlog>=24.4.0",
    "timeout-decorator>=0.5.0",
    "torch>=2.5.1",
    "triton>=3.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
