[project]
name = "matmul"
version = "0.1.0"
description = "Matrix Multiplication Benchmarking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "structlog>=24.4.0",
    "torch>=2.5.1",
    "triton>=3.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
